syntax = "proto3";

option java_outer_classname = "GraphApi";
option java_package = "com.nocmok.orp.road_index.mem_stub.server.grpc";

message Node {
  string id = 1;
  double latitude = 2;
  double longitude = 3;
}

message Segment {
  string id = 1;
  Node startNode = 2;
  Node endNode = 3;
  double cost = 4;
}

message Route {
  repeated Segment segments = 1;
  double cost = 2;
}

message GraphObject {
  string id = 1;
  Segment segment = 2;
  double latitude = 3;
  double longitude = 4;
}

message ObjectUpdater {
  string id = 1;
  string segmentStartNodeId = 2;
  string segmentEndNodeId = 3;
  double latitude = 4;
  double longitude = 5;
}